--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "dependencies": {
+    "@babel/standalone": "^7.12.12",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "react": "^17.0.1",
