--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "customize-cra": "^1.0.0",
+    "flow-bin": "^0.142.0",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "react": "^17.0.1",
@@ -17,6 +18,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "flow": "flow",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
